--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-react": "^7.0.0",
     "fast-async": "^6.3.8",
     "husky": "^1.1.0",
+    "lint-staged": "^7.3.0",
     "prettier": "^1.14.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
