--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   ],
   "license": "MIT",
   "lint-staged": {
-    "*.{js,md,ts,tsx}": [
+    "src/*.{js,md,ts,tsx}": [
       "prettier --write",
       "git add"
     ]
